k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: typescript-app-example
  namespace: apps-staging
  labels:
    app.kubernetes.io/name: typescript-app-example
    app.kubernetes.io/instance: typescript-app-example
    platform.swhurl.com/managed: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: typescript-app-example
      app.kubernetes.io/instance: typescript-app-example
  template:
    metadata:
      labels:
        app.kubernetes.io/name: typescript-app-example
        app.kubernetes.io/instance: typescript-app-example
        platform.swhurl.com/managed: "true"
    spec:
      containers:
        - name: app
          image: ghcr.io/samclement/swhurl-platform-typescript-app-example:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
