k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: typescript-app-example
  namespace: apps-staging
  labels:
    app.kubernetes.io/name: typescript-app-example
    app.kubernetes.io/instance: typescript-app-example
    platform.swhurl.com/managed: "true"
spec:
  selector:
    app.kubernetes.io/name: typescript-app-example
    app.kubernetes.io/instance: typescript-app-example
  ports:
    - name: http
      port: 80
      targetPort: http
