k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: typescript-app-example
  namespace: apps-staging
  labels:
    app.kubernetes.io/name: typescript-app-example
    app.kubernetes.io/instance: typescript-app-example
    platform.swhurl.com/managed: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - staging-typescript-app-example.homelab.swhurl.com
      secretName: typescript-app-example-tls
  rules:
    - host: staging-typescript-app-example.homelab.swhurl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: typescript-app-example
                port:
                  number: 80
